# go-api/internal/interfaces/http/routes/auth.routes.go
@@ -31,6 +31,5 @@ func RegisterAuthRoutes(mux *http.ServeMux, db *mongo.Database) {
 	mux.Handle("GET /api/v1/auth/me", manager.With(http.HandlerFunc(authHandler.Me), sessAuth.AuthenticateSession))
 	mux.Handle("POST /api/v1/auth/logout", manager.With(http.HandlerFunc(authHandler.Logout), sessAuth.AuthenticateSession))
 
-	mux.Handle("PATCH /api/v1/users/profile", manager.With(http.HandlerFunc(authHandler.UpdateProfile), sessAuth.AuthenticateSession))
-	mux.Handle("DELETE /api/v1/users", manager.With(http.HandlerFunc(authHandler.SoftDelete), sessAuth.AuthenticateSession, sessAuth.RequireSessionRoles("admin")))
+	// mux.Handle("DELETE /api/v1/users", manager.With(http.HandlerFunc(authHandler.SoftDelete), sessAuth.AuthenticateSession, sessAuth.RequireSessionRoles("admin")))
 }
